# every-advent-of-code-in-rust

./: .gitignore  Cargo.toml  Justfile  LICENSE-APACHE  README.md
src/: calendar.rs  io.rs  main.rs
src/calendar/: year_2015.rs  year_2025.rs
src/calendar/year_2015/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
src/calendar/year_2025/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
