[package]
name = "every-advent-of-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
flate2 = "1.1.5"
md5 = "0.8.0"
nalgebra = "0.34.1"
nalgebra-sparse = "0.11.0"
ndarray = "0.17.1"
petgraph = "0.8.3"
polars = { version = "0.51.0", features = [
    "decompress",
    "lazy",
    "ndarray",
    "polars-io",
] }
pretty_assertions = "1.4.1"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "tracing-log",
] }
utf8-decode = "1.0.1"

[[bin]]
name = "ra"
path = "src/main.rs"
